- I just modified the ADD, and the Delete Founction. - Both of them are tested and working fine. - Next task is to work on Display, Mark Functions.

--- a/TO_DO_LIST/TO_DO_LIST.cbp
+++ b/TO_DO_LIST/TO_DO_LIST.cbp
@@ -32,7 +32,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Add_Note.cpp" />
+		<Unit filename="Add_Note.h" />
+		<Unit filename="Delete_Note.cpp" />
+		<Unit filename="Delete_Note.h" />
+		<Unit filename="Display_Note.cpp" />
+		<Unit filename="Display_Note.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="properties.cpp" />
+		<Unit filename="properties.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
