- I just tested al the projects a Created till now. - The projects are working, so i made the first release. - All the releases has been made are independed which means   user don't need to install any thing to the system to make   those programs/games work.

--- a/TIC_TAC_TOE_GAME/TIC_TAC_TOE_GAME.cbp
+++ b/TIC_TAC_TOE_GAME/TIC_TAC_TOE_GAME.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-static" />
+		</Linker>
 		<Unit filename="Game_functions.cpp" />
 		<Unit filename="Game_functions.h" />
 		<Unit filename="main.cpp" />
