--- a/TO_DO_LIST/TO_DO_LIST.cbp
+++ b/TO_DO_LIST/TO_DO_LIST.cbp
@@ -25,12 +25,14 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-static" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-static" />
 		</Compiler>
 		<Unit filename="Add_Note.cpp" />
 		<Unit filename="Add_Note.h" />
@@ -38,6 +40,8 @@
 		<Unit filename="Delete_Note.h" />
 		<Unit filename="Display_Note.cpp" />
 		<Unit filename="Display_Note.h" />
+		<Unit filename="Edit_Note.cpp" />
+		<Unit filename="Edit_Note.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="properties.cpp" />
 		<Unit filename="properties.h" />
