--- a/NUMBER_GUESSING_GAME/NUMBER_GUESSING_GAME.cbp
+++ b/NUMBER_GUESSING_GAME/NUMBER_GUESSING_GAME.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-static" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
