--- a/SIMPLE_CALCULATOR/SIMPLE_CALCULATOR.cbp
+++ b/SIMPLE_CALCULATOR/SIMPLE_CALCULATOR.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-static" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
